--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>Teste</title>
 </head>
 <body>
+    <div id="dvMenu" style="padding-left: 20%; padding-right: 20%;">
+        <div style="background-color: brown; text-align: center;">
+            <div style="height: 300px; margin: 10px; background-color: burlywood;">
+    
+            </div>
+            <div>
+                <button onclick="iniciarJogo()">Iniciar</button>
+            </div>
+            <br>
+            <div>
+                <button onclick="configuracoes()">Configurações</button>
+            </div>
+            <div style="height: 100px;">
+
+            </div>
+        </div>
+    </div>
+
+    <div id="dvMenuConfiguracoes" style="padding-left: 20%; padding-right: 20%; display: none;">
+        <div style="background-color: brown; text-align: center;">
+
+        </div>
+    </div>
+
     <script src="phaser.min.js"></script>
     <script src="script.js"></script>
 </body>
