--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Teste</title>
 </head>
 <body>
-    <div id="dvMenu" style="padding-left: 20%; padding-right: 20%;">
+    <div id="dvMenu" style="padding-left: 2%; padding-right: 2%;">
         <div style="background-color: brown; text-align: center;">
-            <div style="height: 300px; margin: 10px; background-color: burlywood;">
-    
+            <br>
+            <div style="margin: 5%; background-color: burlywood;">
+                <img src="assets/logoGame.png" style="width: 30%;">
             </div>
             <div>
                 <button onclick="iniciarJogo()">Iniciar</button>
@@ -25,9 +26,9 @@
         </div>
     </div>
 
-    <div id="dvMenuConfiguracoes" style="padding-left: 20%; padding-right: 20%; display: none;">
-        <div style="background-color: brown; text-align: center;">
-
+    <div id="dvMenuConfiguracoes" style="padding-left: 2%; padding-right: 2%; display: none;">
+        <div style="background-color: brown; text-align: center; height: 500px;">
+            <button onclick="sairJogo()">Sair</button>
         </div>
     </div>
 
