corote dlc blue

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Teste</title>
 </head>
-<body style="background-color: #900">
+<body style="background-color: #000">
     <div id="dvMenu" style="padding-left: 2%; padding-right: 2%;">
         <div style="text-align: center;">
             <br>
-            <div style="margin: 5%; background-color: burlywood;">
-                <img src="assets/logoGame.png" style="width: 30%;">
+            <div style="margin: 5%;">
+                <img src="assets/logoGame.png" style="width: 40%;">
             </div>
             <div>
                 <button onclick="iniciarJogo()">Iniciar</button>
@@ -38,6 +38,10 @@
         <br>
 
         <button onclick="reiniciar()">Reiniciar</button>
+    </div>
+
+    <div id='dvFimFase' style="display: none; text-align: center;">
+        <h1 style="margin-top: 10%;">Parabéns, passou de fase!</h1>
     </div>
 
     <script>
